--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "ahoi@gstrobl.at",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --inspect src/index.js --exec babel-node"
+    "start": "node dist/server.js",
+    "dev": "nodemon --inspect src/index.js --exec babel-node",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
@@ -17,7 +19,8 @@
     "firebase-admin": "^8.10.0",
     "nodemon": "^2.0.3",
     "puppeteer": "^2.1.1",
-    "telegraf": "^3.37.0"
+    "telegraf": "^3.37.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -26,6 +29,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -34,6 +38,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
