--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "dayjs": "^1.8.25",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.14.0",
@@ -22,7 +23,6 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -38,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
+    "nodemon": "^2.0.3",
     "prettier": "^2.0.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
