--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "dayjs": "^1.8.25",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-status-monitor": "^1.3.2",
     "firebase": "^7.14.0",
     "firebase-admin": "^8.10.0",
+    "http-auth": "^4.1.2",
+    "http-auth-connect": "^1.0.4",
     "puppeteer": "^2.1.1",
     "telegraf": "^3.37.0",
     "webpack-node-externals": "^1.7.2"
